# dataguard-cli

./: MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
dataguard/: cli.py  config.py  loader.py  profiler.py  utils.py
dataguard/commands/: report.py  scan.py
dataguard/config/: loader.py  rules.yaml
dataguard/core/: engine.py  fixer.py  rules.py
dataguard/schemas/: result_schema.py
dataguard/ui/: banner.py  status.py  summary.py  table.py
examples/: sample.csv
tests/: test_banner.py  test_detector.py  test_fixer.py  test_profiler.py  test_report.py  test_sample_files.py
