[project]
name = "dataguard-cli"
version = "0.1.1"
description = "A fast, modular CLI tool for data quality analysis, profiling, and cleaning using Polars and Rich."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.39.3",
    "pyfiglet>=1.0.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
